<resources>

    <!--    App     -->
    <string name="app_name">AndersenHomeworks</string>

    <!--    MainActivity        -->
    <string name="activityMain_btnLesson1_2_title">Lessons 1,2</string>
    <string name="activityMain_btnLesson3Part1_title">Lesson 3 (Img loading)</string>
    <string name="activityMain_btnLesson3Part2_title">Lesson 3 (Country flags)</string>

    <!--    ActivityLesson1_2       -->
    <string name="activityLesson1_2_label">Lessons 1,2</string>
    <string name="activityLesson1_2_btnCount_title">Count</string>
    <string name="activityLesson1_2_btnToast_title">Toast</string>
    <string name="activityLesson1_2_tvCount_text">0</string>
    <string name="activityLesson1_2_toastMessage">Hello Toast!</string>

    <!--    ActivityLesson3Part1       -->
    <string name="activityLesson3_part1_label">Lesson 3 Part 1</string>
    <string name="activityLesson3_part1_btnLoad_title">Load</string>
    <string name="activityLesson3_part1_imgInputEmpty">You need to enter an imgUrl</string>

    <!--    ActivityLesson3Part2       -->
    <string name="activityLesson3_part2_label">Lesson 3 Part 2</string>
    <string name="austria">Austria</string>
    <string name="poland">Poland</string>
    <string name="italy">Italy</string>
    <string name="colombia">Colombia</string>
    <string name="madagasсar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="switzerland">Switzerland</string>
    <string name="activityMain_btnLesson4_title">Lesson 4 (Custom view)</string>

    <!--    ActivityLesson5/6     -->
    <string name="activityLesson4_label">Lesson 4</string>
    <string name="activityLesson4_startBtn_title">start</string>
    <string name="activityLesson4_stopBtn_title">stop</string>
    <string name="activityLesson5_label">Lesson 5</string>
    <string name="activityLesson6_label">Lesson 6</string>
    <string name="activityMain_btnLesson5_title">Lesson 5 (Contacts)</string>
    <string name="activityMain_btnLesson6_title">Lesson 6 (Contacts RecyclerView)</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_phoneNumber">Phone number</string>
    <string name="save_btn_title">save</string>
    <string name="cancel_btn_title">@android:string/cancel</string>
    <string name="edit_btn_title">Edit</string>
    <string name="contact_edit_fragment_title">Editing</string>
    <string name="contact_details_firstname_title">First name:</string>
    <string name="contact_details_second_name_title">Last name:</string>
    <string name="contact_details_phone_number_title">Phone number:</string>
    <string name="contact_menu_item_delete_title">Delete</string>
    <string name="alert_dialog_delete_title">Delete</string>
    <string name="alert_dialog_delete_message">Are you sure?</string>
    <string name="alert_dialog_delete_accept">Delete</string>
    <string name="alert_dialog_delete_reject">Cancel</string>
    <string name="contact_search_hint">Search contacts…</string>

</resources>