<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_padding"
        android:text="@string/contact_edit_fragment_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/contact_edit_first_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/contact_first_name">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_edit_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_edit_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_padding"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/contact_edit_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_btn_title"/>

        <Button
            android:id="@+id/contact_edit_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_btn_title"/>

    </LinearLayout>

</LinearLayout>