<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    android:orientation="vertical"
    tools:context=".lessons1_2.ActivityLessons1_2">

    <Button
        android:id="@+id/activityLesson1_2_btnToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityLesson1_2_btnToast_title" />

    <TextView
        android:id="@+id/activityLesson1_2_tvCount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/activityLesson1_2_tvCount_text"
        android:textSize="@dimen/activityMain_tvCount_textSize"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/teal_200" />

    <Button
        android:id="@+id/activityLesson1_2_btnCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityLesson1_2_btnCount_title" />

</LinearLayout>