<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/app_margin"
    app:cardCornerRadius="@dimen/default_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_details_img_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/default_corner_radius"
            android:layout_marginBottom="@dimen/contact_details_default_margin">

            <ImageView
                android:id="@+id/contact_details_img"
                android:layout_width="@dimen/contact_details_image_size"
                android:layout_height="@dimen/contact_details_image_size"
                tools:src="@drawable/ic_baseline_person_24"/>

        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/contact_details_firstName_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_first_name"
            style="@style/ContactDetailFieldLabel"/>

        <TextView
            android:id="@+id/contact_details_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContactDetailField"
            tools:text="firstname"/>

        <TextView
            android:id="@+id/contact_details_secondName_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_last_name"
            style="@style/ContactDetailFieldLabel"/>

        <TextView
            android:id="@+id/contact_details_secondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/ContactDetailField"
            tools:text="firstname"/>

        <TextView
            android:id="@+id/contact_details_phoneNumber_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_phoneNumber"
            style="@style/ContactDetailFieldLabel"/>

        <TextView
            android:id="@+id/contact_details_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/ContactDetailField"
            tools:text="firstname"/>

        <Button
            android:id="@+id/contact_details_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/edit_btn_title"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>